add search properties to openapi spec, add tenant endpoints to apicheck
